--- a/build.gradle
+++ b/build.gradle
@@ -13,4 +13,5 @@ test {
 dependencies {
     testCompile("org.junit.jupiter:junit-jupiter-api:5.2.0")
     testRuntime("org.junit.jupiter:junit-jupiter-engine:5.2.0")
+    testRuntime("org.junit.platform:junit-platform-launcher:1.2.0")
 }
